--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9243,19 +9243,23 @@ header {
 
 /* line 466, ../sass/app.scss */
 .park-info-cont {
+  overflow-y: scroll;
+  height: 70px;
+  width: 100%;
+  position: relative;
+}
+/* line 472, ../sass/app.scss */
+.park-info-cont ul {
   padding: 15px 25px;
   margin: 0;
   color: #524231;
-  height: 400px;
-  width: 100%;
-  overflow-y: scroll;
 }
-/* line 474, ../sass/app.scss */
-.park-info-cont li {
+/* line 477, ../sass/app.scss */
+.park-info-cont ul li {
   display: block;
 }
 
-/* line 480, ../sass/app.scss */
+/* line 484, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9263,12 +9267,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 480, ../sass/app.scss */
+  /* line 484, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 490, ../sass/app.scss */
+/* line 494, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9278,22 +9282,22 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 490, ../sass/app.scss */
+  /* line 494, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 502, ../sass/app.scss */
+/* line 506, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 506, ../sass/app.scss */
+/* line 510, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 125px;
 }
 
-/* line 513, ../sass/app.scss */
+/* line 517, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9308,7 +9312,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 527, ../sass/app.scss */
+/* line 531, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9317,7 +9321,7 @@ header {
   bottom: 0;
 }
 
-/* line 535, ../sass/app.scss */
+/* line 539, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9336,24 +9340,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 535, ../sass/app.scss */
+  /* line 539, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 557, ../sass/app.scss */
+/* line 561, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 557, ../sass/app.scss */
+  /* line 561, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 567, ../sass/app.scss */
+/* line 571, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9362,7 +9366,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 577, ../sass/app.scss */
+/* line 581, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9377,7 +9381,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 587, ../sass/app.scss */
+/* line 591, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9387,7 +9391,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 597, ../sass/app.scss */
+/* line 601, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9399,18 +9403,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 604, ../sass/app.scss */
+/* line 608, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: auto;
 }
-/* line 609, ../sass/app.scss */
+/* line 613, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 614, ../sass/app.scss */
+/* line 618, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9421,7 +9425,7 @@ header {
   opacity: 0;
 }
 
-/* line 628, ../sass/app.scss */
+/* line 632, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9436,7 +9440,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 638, ../sass/app.scss */
+/* line 642, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9446,7 +9450,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 648, ../sass/app.scss */
+/* line 652, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: auto;
@@ -9461,14 +9465,14 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 659, ../sass/app.scss */
+/* line 663, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 665, ../sass/app.scss */
+/* line 669, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9476,7 +9480,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 677, ../sass/app.scss */
+/* line 681, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9486,7 +9490,7 @@ footer {
   opacity: 0;
 }
 
-/* line 682, ../sass/app.scss */
+/* line 686, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9496,17 +9500,17 @@ footer {
   opacity: 1;
 }
 
-/* line 687, ../sass/app.scss */
+/* line 691, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 691, ../sass/app.scss */
+/* line 695, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 695, ../sass/app.scss */
+/* line 699, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9517,7 +9521,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 701, ../sass/app.scss */
+/* line 705, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9529,7 +9533,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 713, ../sass/app.scss */
+/* line 717, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9538,7 +9542,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 717, ../sass/app.scss */
+/* line 721, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9547,7 +9551,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 721, ../sass/app.scss */
+/* line 725, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9556,7 +9560,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 725, ../sass/app.scss */
+/* line 729, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9565,7 +9569,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 729, ../sass/app.scss */
+/* line 733, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9574,7 +9578,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 733, ../sass/app.scss */
+/* line 737, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9587,7 +9591,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 741, ../sass/app.scss */
+/* line 745, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9596,7 +9600,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 745, ../sass/app.scss */
+/* line 749, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9609,7 +9613,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 753, ../sass/app.scss */
+/* line 757, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9626,7 +9630,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 765, ../sass/app.scss */
+/* line 769, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9636,7 +9640,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 770, ../sass/app.scss */
+/* line 774, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9646,7 +9650,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 775, ../sass/app.scss */
+/* line 779, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9656,7 +9660,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 780, ../sass/app.scss */
+/* line 784, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9666,7 +9670,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 785, ../sass/app.scss */
+/* line 789, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
