--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -138,7 +138,7 @@ body {
 /* GENERAL CLASSES */
 
 header {
-	margin: 40px;
+	margin: 40px 30px;
 }
 
 .header-cont {
@@ -225,7 +225,7 @@ header {
 
 .gmap {
 	width: 100%;
-	height: 40%;
+	height: 35%;
 }
 
 .fire-btn {
@@ -392,7 +392,7 @@ header {
 .park-distance-ul {
 	overflow: hidden;
 	width: 100%;
-	height: 76px;
+	height: 56px;
 
 	@media all and (min-width: $screen-sm) {
 		height: auto;
@@ -413,15 +413,21 @@ header {
 			list-style: none;
 			position: relative;
 			display: inline-block;
-			height: 75px;
-			width: 75px;
-			border: 6px solid $dark-main;
+			height: 55px;
+			width: 55px;
+			border: 4px solid $dark-main;
 			margin: 0 1px;
 			font-size: 0;
 			vertical-align: middle;
 			text-align: center;
 			cursor: pointer;
 			@include transitionStyle(all, 1s, ease-in-out);
+
+			@media all and (min-width: $screen-sm) {
+				height: 75px;
+				width: 75px;
+				border: 6px solid $dark-main;
+			}
 
 			&:hover {
 				opacity: .7;
@@ -464,12 +470,11 @@ header {
 }
 
 .park-info-cont {
-	height: 70px;
 	width: 100%;
 	position: relative;
 
 	ul {
-		padding: 15px 25px;
+		padding: 5px 15px;
 		margin: 0;
 		color: $btn-text;
 
@@ -483,7 +488,7 @@ header {
 .park-images-ul {
 	overflow: hidden;
 	width: 100%;
-	height: 125px;
+	height: 95px;
 	position: relative;
 
 	@media all and (min-width: $screen-sm) {
@@ -507,7 +512,10 @@ header {
 			padding-right: 5px;
 
 			img {
-				height: 125px;
+				height: 95px;
+				@media all and (min-width: $screen-sm) {
+					height: 125px; // to open horizontal scroll bar visibility
+				}
 			}
 		}
 	}
