--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8852,7 +8852,7 @@ body {
 /* GENERAL CLASSES */
 /* line 140, ../sass/app.scss */
 header {
-  margin: 40px;
+  margin: 40px 30px;
 }
 
 /* line 144, ../sass/app.scss */
@@ -8959,7 +8959,7 @@ header {
 /* line 226, ../sass/app.scss */
 .gmap {
   width: 100%;
-  height: 40%;
+  height: 35%;
 }
 
 /* line 231, ../sass/app.scss */
@@ -9151,7 +9151,7 @@ header {
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
-  height: 76px;
+  height: 56px;
 }
 @media all and (min-width: 768px) {
   /* line 392, ../sass/app.scss */
@@ -9178,9 +9178,9 @@ header {
   list-style: none;
   position: relative;
   display: inline-block;
-  height: 75px;
-  width: 75px;
-  border: 6px solid #71e271;
+  height: 55px;
+  width: 55px;
+  border: 4px solid #71e271;
   margin: 0 1px;
   font-size: 0;
   vertical-align: middle;
@@ -9192,7 +9192,15 @@ header {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 426, ../sass/app.scss */
+@media all and (min-width: 768px) {
+  /* line 412, ../sass/app.scss */
+  .park-distance-ul ul li {
+    height: 75px;
+    width: 75px;
+    border: 6px solid #71e271;
+  }
+}
+/* line 432, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9201,7 +9209,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 431, ../sass/app.scss */
+/* line 437, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9212,17 +9220,17 @@ header {
   color: #524231;
 }
 
-/* line 444, ../sass/app.scss */
+/* line 450, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 448, ../sass/app.scss */
+/* line 454, ../sass/app.scss */
 .park-selected-official {
   border: 6px solid #524231 !important;
 }
 
-/* line 452, ../sass/app.scss */
+/* line 458, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9241,37 +9249,36 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 466, ../sass/app.scss */
+/* line 472, ../sass/app.scss */
 .park-info-cont {
-  height: 70px;
   width: 100%;
   position: relative;
 }
-/* line 471, ../sass/app.scss */
+/* line 476, ../sass/app.scss */
 .park-info-cont ul {
-  padding: 15px 25px;
+  padding: 5px 15px;
   margin: 0;
   color: #524231;
 }
-/* line 476, ../sass/app.scss */
+/* line 481, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 483, ../sass/app.scss */
+/* line 488, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
-  height: 125px;
+  height: 95px;
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 483, ../sass/app.scss */
+  /* line 488, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 493, ../sass/app.scss */
+/* line 498, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9281,22 +9288,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 493, ../sass/app.scss */
+  /* line 498, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 505, ../sass/app.scss */
+/* line 510, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 509, ../sass/app.scss */
+/* line 514, ../sass/app.scss */
 .park-images-ul ul li img {
-  height: 125px;
+  height: 95px;
+}
+@media all and (min-width: 768px) {
+  /* line 514, ../sass/app.scss */
+  .park-images-ul ul li img {
+    height: 125px;
+  }
 }
 
-/* line 516, ../sass/app.scss */
+/* line 524, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9311,7 +9324,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 530, ../sass/app.scss */
+/* line 538, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9320,7 +9333,7 @@ header {
   bottom: 0;
 }
 
-/* line 538, ../sass/app.scss */
+/* line 546, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9339,24 +9352,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 538, ../sass/app.scss */
+  /* line 546, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 560, ../sass/app.scss */
+/* line 568, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 560, ../sass/app.scss */
+  /* line 568, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 570, ../sass/app.scss */
+/* line 578, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9365,7 +9378,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 580, ../sass/app.scss */
+/* line 588, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9380,7 +9393,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 590, ../sass/app.scss */
+/* line 598, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9390,7 +9403,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 600, ../sass/app.scss */
+/* line 608, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9402,18 +9415,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 607, ../sass/app.scss */
+/* line 615, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: auto;
 }
-/* line 612, ../sass/app.scss */
+/* line 620, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 617, ../sass/app.scss */
+/* line 625, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9424,7 +9437,7 @@ header {
   opacity: 0;
 }
 
-/* line 631, ../sass/app.scss */
+/* line 639, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9439,7 +9452,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 641, ../sass/app.scss */
+/* line 649, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9449,7 +9462,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 651, ../sass/app.scss */
+/* line 659, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: auto;
@@ -9464,14 +9477,14 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 662, ../sass/app.scss */
+/* line 670, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 668, ../sass/app.scss */
+/* line 676, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9479,7 +9492,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 680, ../sass/app.scss */
+/* line 688, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9489,7 +9502,7 @@ footer {
   opacity: 0;
 }
 
-/* line 685, ../sass/app.scss */
+/* line 693, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9499,17 +9512,17 @@ footer {
   opacity: 1;
 }
 
-/* line 690, ../sass/app.scss */
+/* line 698, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 694, ../sass/app.scss */
+/* line 702, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 698, ../sass/app.scss */
+/* line 706, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9520,7 +9533,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 704, ../sass/app.scss */
+/* line 712, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9532,7 +9545,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 716, ../sass/app.scss */
+/* line 724, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9541,7 +9554,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 720, ../sass/app.scss */
+/* line 728, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9550,7 +9563,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 724, ../sass/app.scss */
+/* line 732, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9559,7 +9572,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 728, ../sass/app.scss */
+/* line 736, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9568,7 +9581,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 732, ../sass/app.scss */
+/* line 740, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9577,7 +9590,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 736, ../sass/app.scss */
+/* line 744, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9590,7 +9603,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 744, ../sass/app.scss */
+/* line 752, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9599,7 +9612,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 748, ../sass/app.scss */
+/* line 756, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9612,7 +9625,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 756, ../sass/app.scss */
+/* line 764, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9629,7 +9642,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 768, ../sass/app.scss */
+/* line 776, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9639,7 +9652,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 773, ../sass/app.scss */
+/* line 781, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9649,7 +9662,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 778, ../sass/app.scss */
+/* line 786, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9659,7 +9672,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 783, ../sass/app.scss */
+/* line 791, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9669,7 +9682,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 788, ../sass/app.scss */
+/* line 796, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
