--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -169,7 +169,7 @@ header {
 
 	svg {
 		width: 50px;
-		height: auto;
+		height: 50px;
 		float: left;
 	}
 }
@@ -328,7 +328,7 @@ header {
 		li {
 			position: relative;
 			height  : 150px;
-			width   : auto;
+			width   : 100%;
 			padding : 5px 0 5px 0;
 
 			@media ( min-width: $screen-sm )
@@ -639,6 +639,7 @@ header {
 
 	    svg {
 			width: 60px;
+			height: 60px;
 			height: auto;
 		}
 
