--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9125,21 +9125,24 @@ header {
   -o-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
   opacity: .9;
+  background-size: 100%;
+  background-position: left center;
+  background-repeat: no-repeat;
 }
-/* line 376, ../sass/app.scss */
+/* line 379, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 379, ../sass/app.scss */
+/* line 382, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 383, ../sass/app.scss */
+/* line 386, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 388, ../sass/app.scss */
+/* line 391, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9155,7 +9158,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 399, ../sass/app.scss */
+/* line 402, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9165,25 +9168,25 @@ header {
   background-color: #fff;
 }
 
-/* line 408, ../sass/app.scss */
+/* line 411, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 413, ../sass/app.scss */
+/* line 416, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 413, ../sass/app.scss */
+  /* line 416, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 422, ../sass/app.scss */
+/* line 425, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9192,12 +9195,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 422, ../sass/app.scss */
+  /* line 425, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 433, ../sass/app.scss */
+/* line 436, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9218,13 +9221,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 433, ../sass/app.scss */
+  /* line 436, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 453, ../sass/app.scss */
+/* line 456, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9233,7 +9236,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 458, ../sass/app.scss */
+/* line 461, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9244,23 +9247,23 @@ header {
   color: #502d07;
 }
 
-/* line 471, ../sass/app.scss */
+/* line 474, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 475, ../sass/app.scss */
+/* line 478, ../sass/app.scss */
 .park-selected-official {
   border: 4px solid #502d07 !important;
 }
 @media all and (min-width: 768px) {
-  /* line 475, ../sass/app.scss */
+  /* line 478, ../sass/app.scss */
   .park-selected-official {
     border: 6px solid #502d07 !important;
   }
 }
 
-/* line 483, ../sass/app.scss */
+/* line 486, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9279,23 +9282,23 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 497, ../sass/app.scss */
+/* line 500, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 501, ../sass/app.scss */
+/* line 504, ../sass/app.scss */
 .park-info-cont ul {
   padding: 0 15px;
   margin: 0;
   color: #502d07;
 }
-/* line 506, ../sass/app.scss */
+/* line 509, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 513, ../sass/app.scss */
+/* line 516, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9303,12 +9306,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 513, ../sass/app.scss */
+  /* line 516, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 523, ../sass/app.scss */
+/* line 526, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9318,28 +9321,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 523, ../sass/app.scss */
+  /* line 526, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 535, ../sass/app.scss */
+/* line 538, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 539, ../sass/app.scss */
+/* line 542, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 539, ../sass/app.scss */
+  /* line 542, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 549, ../sass/app.scss */
+/* line 552, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9354,7 +9357,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 563, ../sass/app.scss */
+/* line 566, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9363,7 +9366,7 @@ header {
   bottom: 0;
 }
 
-/* line 571, ../sass/app.scss */
+/* line 574, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9382,24 +9385,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 571, ../sass/app.scss */
+  /* line 574, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 593, ../sass/app.scss */
+/* line 596, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 593, ../sass/app.scss */
+  /* line 596, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 603, ../sass/app.scss */
+/* line 606, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9408,7 +9411,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 613, ../sass/app.scss */
+/* line 616, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9423,7 +9426,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 623, ../sass/app.scss */
+/* line 626, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9433,7 +9436,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 633, ../sass/app.scss */
+/* line 636, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9445,19 +9448,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 640, ../sass/app.scss */
+/* line 643, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: 60px;
-  height: auto;
 }
-/* line 646, ../sass/app.scss */
+/* line 648, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 651, ../sass/app.scss */
+/* line 653, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9468,7 +9470,7 @@ header {
   opacity: 0;
 }
 
-/* line 665, ../sass/app.scss */
+/* line 667, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9483,7 +9485,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 675, ../sass/app.scss */
+/* line 677, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9493,10 +9495,10 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 685, ../sass/app.scss */
+/* line 687, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
-  height: auto;
+  height: 35px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -9508,14 +9510,14 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 696, ../sass/app.scss */
+/* line 698, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 702, ../sass/app.scss */
+/* line 704, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9523,7 +9525,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 714, ../sass/app.scss */
+/* line 716, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9533,7 +9535,7 @@ footer {
   opacity: 0;
 }
 
-/* line 719, ../sass/app.scss */
+/* line 721, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9543,17 +9545,17 @@ footer {
   opacity: 1;
 }
 
-/* line 724, ../sass/app.scss */
+/* line 726, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 728, ../sass/app.scss */
+/* line 730, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 732, ../sass/app.scss */
+/* line 734, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9564,7 +9566,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 738, ../sass/app.scss */
+/* line 740, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9576,7 +9578,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 750, ../sass/app.scss */
+/* line 752, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9585,7 +9587,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 754, ../sass/app.scss */
+/* line 756, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9594,7 +9596,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 758, ../sass/app.scss */
+/* line 760, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9603,7 +9605,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 762, ../sass/app.scss */
+/* line 764, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9612,7 +9614,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 766, ../sass/app.scss */
+/* line 768, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9621,7 +9623,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 770, ../sass/app.scss */
+/* line 772, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9634,7 +9636,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 778, ../sass/app.scss */
+/* line 780, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9643,7 +9645,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 782, ../sass/app.scss */
+/* line 784, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9656,7 +9658,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 790, ../sass/app.scss */
+/* line 792, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9673,7 +9675,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 802, ../sass/app.scss */
+/* line 804, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9683,7 +9685,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 807, ../sass/app.scss */
+/* line 809, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9693,7 +9695,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 812, ../sass/app.scss */
+/* line 814, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9703,7 +9705,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 817, ../sass/app.scss */
+/* line 819, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9713,7 +9715,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 822, ../sass/app.scss */
+/* line 824, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
